[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NREL-erad"
version="0.0.1"
description = "Graph based scalable tool for computing equitable resilience metrics for distribution systems."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kapil Duwadi", email = "kapil.duwadi@nrel.gov" },
    { name = "Aadil Latif", email = "aadil.altif@nrel.gov" },
    { name = "Kwami Sedzro", email = "sherinann.abraham@nrel.gov" },
    { name = "Sherin Ann Abraham", email = "kwami.sedzro@nrel.gov" },
    { name = "Bryan Palmintier", email = "bryan.palmintier@nrel.gov" },
]
maintainers = [
    { name = "Aadil Latif", email = "Aadil.Latif@nrel.gov" },
]
keywords = [
    "Distribution",
    "Earthquake",
    "Energy",
    "Fire",
    "Flooding",
    "Power",
    "Python",
    "Resilience",
    "Systems",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "boto3",
    "botocore",
    "ditto.py",
    "geojson",
    "geopandas",
    "geopy",
    "graphdatascience",
    "jupyter",
    "matplotlib",
    "neo4j-driver",
    "networkx",
    "OpenDSSDirect.py",
    "pandas",
    "plotly",
    "pydantic~=1.10.14",
    "pytest",
    "python-dotenv",
    "pyyaml",
    "rasterio",
    "requests",
    "scipy",
    "shapely",
    "stateplane",
    "xmltodict",
    "lxml",
    "html5lib",
    "pyhigh"
]

[project.optional-dependencies]
dev = [
    "black",
    "mkdocs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/nrel/erad"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "_build",
  "build",
  "dist",
  "env",
  "venv",
]
ignore-init-module-imports = true
line-length = 99
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
  "C901", # McCabe complexity
  "E4",   # Subset of pycodestyle (E)
  "E7",
  "E9",
  "F",    # Pyflakes
  "W",    # pycodestyle warnings
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
